# robot_navigation_stack

./: ..gitignore.swp  .gitignore  README.md  SetUp  gobot_software  map_test.cpp  rsa_key  rsa_key.pub  slam.rviz
amcl/src/: amcl_node.cpp
gmapping/: CMakeLists.txt
gmapping/src/: footprint.cpp  slam_gmapping.cpp  slam_gmapping.h
gobot_base/: CMakeLists.txt  package.xml
gobot_base/launch/: brushless_test.launch  gobot_base.launch  lasertest.launch  lidar_test.launch  mapbase.launch  robot_ekf.launch  robot_sensors_params.launch  rpmapbase.launch  temp.launch  test.launch
gobot_base/msg/: SonarMsg.msg
gobot_base/script/: sensors.py  twist.py  wheels.py
gobot_base/src/: brushless_motor.cpp  brushless_motor_node.cpp  gyro_node.cpp  led.cpp  motor_node.cpp  odom.cpp  sensor_node.cpp  sensors.cpp  twist.cpp  wheel_node.cpp  wheels.cpp  wheels_reduced_acc.cpp
gobot_bumpers2pc/: CMakeLists.txt  package.xml
gobot_bumpers2pc/launch/: gobot_bumpers2pc.launch
gobot_bumpers2pc/params/: gobot_bumpers2pc.yaml
gobot_bumpers2pc/src/: bumpers2pc.cpp
gobot_data/: CMakeLists.txt  package.xml
gobot_data/IP/: connectWIFI.sh  deleteWIFI.sh  isAlive.txt  ping.sh  ping1.sh  pings.sh  wifi.txt
gobot_data/Robot_Infos/: home.txt  path.txt
gobot_data/command/: restart_robot.sh  robot_log.sh  shutdown.sh  start_robot.sh  (+2 more)
gobot_function/: CMakeLists.txt  package.xml
gobot_function/include/gobot_function/: detection_function.h  docking_function.h  move_function.h  scan_function.h  shape_detection.hpp
gobot_function/launch/: detection_test.launch  gobot_function.launch  object_detection.launch
gobot_function/src/: battery_monitor_function.cpp  detection_function.cpp  docking_function.cpp  move_function.cpp  scan_function.cpp  shape_detection_node.cpp
gobot_msg_srv/: CHANGELOG.rst  CMakeLists.txt  package.xml
gobot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml  test.txt
gobot_recovery/: CMakeLists.txt  init_back_plugin.xml  package.xml
gobot_recovery/Robot_Infos/: last_pose.txt  pose.txt
gobot_recovery/include/gobot_recovery/: allow_teb_back.h  allow_teb_back.hpp  init_back_recovery.h  initialpose_estimation.h  pose_estimation.h  scan_startup.h  startup.h
gobot_recovery/launch/: gazebo_recovery.launch  gobot_recovery.launch
gobot_recovery/src/: Untitled Document  allow_teb_back.cpp  init_back_recovery.cpp  initialpose_estimation.cpp  pose_estimation.cpp  scan_startup.cpp  startup.cpp
gobot_sensors2pc/: CMakeLists.txt  package.xml
gobot_simulation/: start_gazebo.sh  start_gazebo_no_software.sh
gobot_simulation/gobot_control/: CMakeLists.txt  package.xml
gobot_simulation/gobot_control/include/gobot_control/: battery_controller.hpp  bumper_controller.hpp  gobot_diff_drive_plugin.hpp  ir_controller.hpp  proximity_controller.hpp  sonar_controller.hpp
gobot_simulation/gobot_control/launch/: controller.launch
gobot_simulation/gobot_control/src/: battery_controller.cpp  bumper_controller.cpp  gobot_diff_drive_plugin.cpp  ir_controller.cpp  proximity_controller.cpp  sonar_controller.cpp
gobot_simulation/gobot_control/srv/: SetBattery.srv
gobot_software/: CMakeLists.txt  CMakeLists.txt~  CommandList.md  package.xml
gobot_software/Robot_Infos/: home.txt  lastKnownPosition.txt  last_pose.txt  mapId.txt  name.txt  path.txt  restart_robot.sh
gobot_software/Robot_Infos/IP/: isAlive.txt  ping.sh
gobot_software/include/: auto_docking.hpp  command_system.hpp  ping_server.hpp
gobot_software/include/gobot_software/: auto_docking.hpp  backup_server.hpp  battery_check.hpp  command_system.hpp  command_system_new.hpp  gobot_status.hpp  initialPosePublisher.hpp  laser.hpp  map_transfer.hpp  move_it.hpp  ping_server.hpp  ping_server_new.hpp  ping_servers.hpp  playPath.hpp  read_new_map.hpp  recover_position.hpp  robot_move.h  robot_pos_transfer.hpp  scan_controller.hpp  set_status_class.h  tcp_command_system.hpp  tcp_ping_server.hpp  tcp_read_map.hpp  tcp_robot_pose.hpp  tcp_teleop_control.hpp  tcp_transfer_laser.hpp  tcp_transfer_map.hpp  teleop.hpp  timeout_blocking_tcp_client.h
gobot_software/launch/: all.launch  gazebo_software.launch  gobot_function.launch  gobot_software.launch  new_slam.launch  robot_infos_params.launch  slam.launch  test.launch
gobot_software/src/: auto_docking.cpp  backup_server.cpp  battery_check.cpp  battery_check.hpp  battery_monitor.cpp  check_servers.cpp  cluster_optimized.cpp  command_system (copy).cpp  command_system (copy).hpp  command_system.cpp  command_system.hpp  command_system_new.cpp  command_system_new_copy.cpp  detection_alignment.cpp  gobot_status.cpp  initialPosePublisher.cpp  isLocalized_optimized.cpp  laser.cpp  map_test.cpp  map_transfer.cpp  map_transfer.hpp  move_it.cpp  ping_server.cpp  ping_server_new.cpp  ping_server_new_copy.cpp  ping_server_node.cpp  ping_servers.cpp  ping_servers_backup.cpp  playPath.cpp  playPath.hpp  qr_detection.cpp  read_new_map.cpp  recover_position.cpp  robot_move.cpp  robot_pos_transfer.cpp  scan_controller.cpp  set_status_class.cpp  start_gobot_navigation.sh  tcp_check_servers.cpp  tcp_command_system.cpp  (+8 more)
gobot_software/src/backup/: battery_check (copy).cpp  command_system_new_copy.cpp  ping_server_new_copy.cpp
hector_exploration_node/: CMakeLists.txt  package.xml
hector_exploration_planner/: package.xml
move_base/: CMakeLists.txt  package.xml
move_demo/: CMakeLists.txt  package.xml
robot_hardware_test/: CMakeLists.txt  README.md  package.xml
robot_infos/: CMakeLists.txt  package.xml
robot_lib_test/: CMakeLists.txt  README.md  package.xml
robot_log/: navigation_log.txt
robot_startup_script/: hardware_check.sh  rviz.sh  slam.rviz  startup.sh  startup2.sh
serial/: CMakeLists.txt
setup/: README.md  create_startup_script.sh  create_udev_rules.sh  create_udevrules_script.sh  driver_package.sh  how_to_install.md  install guide  install_guide.md  install_script.sh  rc.local  robot_upstart  rqt.perspective  rqt.sh  rviz.sh  sensors.rules  slam.rviz  ssh.sh  start_robot.sh  startup.sh  test.sh  username_script.sh
teleop_twist_keyboard/: teleop_twist_keyboard.py
(+292 files in other folders)
