<?xml version="1.0"?>
<package>
    <name>gobot_control</name>
    <version>0.0.0</version>
    <description>The gobot_control package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="viki@todo.todo">viki</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>gobot_msg_srv</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>gazebo_ros</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>gobot_msg_srv</run_depend>
    <run_depend>gazebo_msgs</run_depend>
    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_ros</run_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    </export>
</package>